--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 Assignment1/VeDuongThang/Debug/
 Assignment1/VeDuongThang/.vs/
 Assignment1/VeDuongThang/res/
+Assignment2/VeDuongTron/Debug/VeDuongTronDoc.obj
+Assignment2/VeDuongTron/Debug/
+Assignment2/VeDuongTron/res/
+Assignment2/VeDuongTron/.vs/
