upload lab07 + lab08

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Assignment2/VeDuongTron/.vs/
 *.ipch
 Assignment3/Lab03_ToMauHinhEsclipe/.vs/
 Assignment3/Lab03_ToMauHinhEsclipe/Debug/
+Assignment8/.ipynb_checkpoints/
